--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -1,2 +1,7 @@
 
-<div id="container" style="min-width: 310px; max-width: 800px; height: 400px; margin: 0 auto"></div>
+<div id="container" style="min-width: 310px; max-width: 800px; height: 400px; margin: 0 auto">
+
+	<div id="vizMetrics"></div>
+
+	{{metrics}}
+</div>
