adding classification visualization

--- a/templates/layouts/master.html
+++ b/templates/layouts/master.html
@@ -10,16 +10,14 @@
 		<title>miniml</title>
 		<link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,400,300,600,700" rel="stylesheet" type="text/css">
 		<link href="css/app.css" rel="stylesheet" type="text/css">
+
+		<script src="components/jquery/dist/jquery.js"></script>
+		<script src="components/papaparse/papaparse.js"></script>
+		<script src="components/d3/d3.js"></script>
+		<script src="components/underscore/underscore.js"></script>
+
 	</head>
 	<body>
-		<header class="navbar navbar-fixed-top" id="main-navbar">
-			<div class="navbar-inner">
-				<div class="container">
-
-				</div>
-			</div>
-		</header>
-
 		<section class="container">
 			<section class="row-fluid">
 				<div >
@@ -29,7 +27,9 @@
 		</section>
 
 		<footer id="main-footer"></footer>
+
 	    <script type="text/javascript" data-main="js/src/main" src="components/requirejs/require.js"></script>
+
 	</body>
 </html>
 
